--- a/AgeInMinutes/app/src/main/res/values/colors.xml
+++ b/AgeInMinutes/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="selected_item_color">#00BFA5</color>
+    <color name="pressed_item_color">#4CAF50</color>
 </resources>
