--- a/AgeInMinutes/app/src/main/res/layout/activity_main.xml
+++ b/AgeInMinutes/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="4dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/white"
         android:choiceMode="singleChoice"
         android:divider="@color/colorPrimary"
         android:dividerHeight="1dp"
