--- a/QuizApp/app/src/main/res/values/colors.xml
+++ b/QuizApp/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_blue">#7A75EC</color>
+    <color name="colorPrimary">#FF9013FE</color>
+    <color name="colorPrimaryDark">#FF6A1B9A</color>
 </resources>
