--- a/QuizApp/app/src/main/res/layout/activity_main.xml
+++ b/QuizApp/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/welcome_string"
-                android:textColor="#363A43"
+                android:textColor="@color/greyText"
                 android:textSize="30sp"
                 android:textStyle="bold" />
 
@@ -70,7 +70,7 @@
                     android:hint="@string/name_string"
                     android:imeOptions="actionGo"
                     android:inputType="textCapWords"
-                    android:textColor="#363A43"
+                    android:textColor="@color/greyText"
                     android:textColorHint="#7A8089" />
 
                 <Button
