--- a/QuizApp/app/src/main/res/layout/activity_result.xml
+++ b/QuizApp/app/src/main/res/layout/activity_result.xml
@@ -36,7 +36,7 @@
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"
-        tools:text="username"/>
+        tools:text="Nephat Muchiri"/>
 
     <TextView
         android:layout_width="wrap_content"
