--- a/QuizApp/app/src/main/res/layout/activity_result.xml
+++ b/QuizApp/app/src/main/res/layout/activity_result.xml
@@ -36,7 +36,7 @@
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"
-        tools:text="Nephat Muchiri"/>
+        tools:text="Username"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -52,9 +52,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@android:color/white"
+        android:backgroundTint="@color/white"
         android:text="@string/finish"
-        android:textColor="@color/white"
+        android:textColor="@color/colorPrimary"
         android:textSize="18sp"
         android:textStyle="bold" />
 
