--- a/QuizApp/app/src/main/res/layout/activity_result.xml
+++ b/QuizApp/app/src/main/res/layout/activity_result.xml
@@ -21,8 +21,8 @@
         android:textStyle="bold"/>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="350dp"
         android:id="@+id/ivTrophy"
         android:contentDescription="@string/image"
         android:src="@drawable/ic_trophy"/>
